Tercera parte del memo-test

--- a/memotest-paulita/index.html
+++ b/memotest-paulita/index.html
@@ -115,15 +115,15 @@
 
                 <div class="parte2">
                     <div>
-                        <p>Nombre</p>
+                        <p>Nombre <span id="nombre"></span></p>
                     </div>
 
                     <div>
-                        <p>Nivel</p>
+                        <p>Nivel <span id="Nivel"></span></p>
                     </div>
 
                     <div>
-                        <p>Intentos</p>
+                        <p>Intentos <span id="intents"></span></p>
                     </div>
                 </div>
 
