Cuarta y ultima parte - Memotest terminado

--- a/memotest-paulita/index.html
+++ b/memotest-paulita/index.html
@@ -115,15 +115,15 @@
 
                 <div class="parte2">
                     <div>
-                        <p>Nombre <span id="nombre"></span></p>
+                        <p id="nombre">Nombre </p>
                     </div>
 
                     <div>
-                        <p>Nivel <span id="Nivel"></span></p>
+                        <p id="Nivel">Nivel </p>
                     </div>
 
                     <div>
-                        <p>Intentos <span id="intents"></span></p>
+                        <p id="intents">Intentos</p>
                     </div>
                 </div>
 
